style: Resolve anime video player sizing issue on mobile devices

--- a/Animotion/src/Components/Video/VideoMain/VideoMain.css
+++ b/Animotion/src/Components/Video/VideoMain/VideoMain.css
@@ -334,7 +334,8 @@
 
     .AnimeVideoPlayer{
         width: 350px;
-        height: 197px;
+        height: 235px;
+        object-fit: contain;
     }
 
     .ServerBox{
